# fixmyborderpls

./: Cargo.toml  README.md  build.rs  gitignore  make_icon.py
.github/: build.yml
.github/workflows/: build.yml
src/: icon_data.rs  main.rs
